--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "cordova-android": "^8.1.0"
   },
   "devDependencies": {
+    "cordova-plugin-chrome-apps-common": "^1.0.7",
+    "cordova-plugin-chrome-apps-sockets-tcp": "^1.3.7",
     "cordova-plugin-whitelist": "^1.3.4"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-chrome-apps-sockets-tcp": {}
     },
     "platforms": [
       "android"
